--- a/booking.html
+++ b/booking.html
@@ -26,7 +26,7 @@
         <div class="links">
           <a href="index.html" onclick="menu()">Home</a>
           <a href="#" onclick="menu()">Reservations</a>
-          <a href="index.html#contact" onclick="menu()">Contact us</a>
+          <a href="user-admin.html" onclick="menu()">Contact us</a>
           <a href="signup.html" onclick="menu()">
             <button class="btn-primary">Sign up</button>
           </a>
