--- a/user-admin.html
+++ b/user-admin.html
@@ -87,37 +87,19 @@
           <h1>Active booking</h1>
           <div class="data-table-active">
             <table>
-              <tr>
-                <th>Oparator</th>
-                <th>Route</th>
-                <th>Departure</th>
-                <th>Reservation no.</th>
-                <th>Total amount</th>
-                <th>Payment status</th>
-                <th>Reservation status</th>
-                <th>Booking expiration</th>
-              </tr>
-
-              <tr class="s-ac">
-                <td>YBL</td>
-                <td>Gensan airport - marbel(koronadal)</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-                <td>4110735-111377-8</td>
-                <td>230</td>
-                <td>Unpaid</td>
-                <td>Active</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-              </tr>
+              <thead>
+                <tr>
+                  <th>Oparator</th>
+                  <th>Route</th>
+                  <th>Departure</th>
+                  <th>Reservation no.</th>
+                  <th>Total amount</th>
+                  <th>Payment status</th>
+                  <th>Reservation status</th>
+                  <th>Booking expiration</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
             </table>
           </div>
         </div>
@@ -125,117 +107,21 @@
           <h1>Booking history</h1>
           <div class="data-table">
             <table>
-              <tr>
-                <th>Oparator</th>
-                <th>Route</th>
-                <th>Departure</th>
-                <th>Reservation no.</th>
-                <th>Total amount</th>
-                <th>Payment status</th>
-                <th>Reservation status</th>
-                <th>Booking expiration</th>
-              </tr>
-              <tr>
-                <td>YBL</td>
-                <td>Gensan airport - marbel(koronadal)</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-                <td>4110735-111377-8</td>
-                <td>230</td>
-                <td>Unpaid</td>
-                <td>Active</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-              </tr>
+              <thead>
+                <tr>
+                  <th>Oparator</th>
+                  <th>Route</th>
+                  <th>Departure</th>
+                  <th>Reservation no.</th>
+                  <th>Total amount</th>
+                  <th>Payment status</th>
+                  <th>Reservation status</th>
+                  <th>Booking expiration</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
 
-              <tr class="s-f">
-                <td>YBL</td>
-                <td>Gensan airport - marbel(koronadal)</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-                <td>4110735-111377-8</td>
-                <td>230</td>
-                <td>Unpaid</td>
-                <td>Active</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-              </tr>
-              <tr>
-                <td>YBL</td>
-                <td>Gensan airport - marbel(koronadal)</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-                <td>4110735-111377-8</td>
-                <td>230</td>
-                <td>Unpaid</td>
-                <td>Active</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-              </tr>
-              <tr>
-                <td>YBL</td>
-                <td>Gensan airport - marbel(koronadal)</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-                <td>4110735-111377-8</td>
-                <td>230</td>
-                <td>Unpaid</td>
-                <td>Active</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-              </tr>
-              <tr>
-                <td>YBL</td>
-                <td>Gensan airport - marbel(koronadal)</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-                <td>4110735-111377-8</td>
-                <td>230</td>
-                <td>Unpaid</td>
-                <td>Active</td>
-                <td>
-                  <p>
-                    <i class="uil uil-calender"></i> <span>2022-10-25</span>
-                  </p>
-                  <p><i class="uil uil-clock"></i><span>07:55</span></p>
-                </td>
-              </tr>
             </table>
           </div>
         </div>
@@ -255,5 +141,72 @@
 
     <script src="assets/js/app.js"></script>
     <script src="assets/js/table.js"></script>
+    <script src="assets/js/script.min.js"></script>
+
+    <script>
+      fetchBookingHistory().then(result => {
+        let options = {
+          minimumFractionDigits: 2,
+          maximumFractionDigits: 2
+        };
+        let placeholder = document.querySelector('.booking-history>div>table>tbody');
+        let placeholder1 = document.querySelector('.active-booking>div>table>tbody');
+        let html = '';
+        let html1 = '';
+        console.log(result);
+        result.forEach(row => {
+          if(row.reservationstatus ==='ACTIVE'){
+            html1 +=`<tr class="s-ac">
+                      <td>${row.bus_operator}</td>
+                      <td>${row.origin} - ${row.destination}</td>
+                      <td>
+                        <p>
+                          <i class="uil uil-calender"></i> <span>${(row.etd).split(' ')[0]}</span>
+                        </p>
+                        <p><i class="uil uil-clock"></i><span>${formatTime((row.etd).split(' ')[1])}</span></p>
+                      </td>
+                      <td>${row.reference_no}</td>
+                      <td>${ (row.total_amount_due).toLocaleString('en', options)}</td>
+                      <td>${row.paidstatus}</td>
+                      <td>${row.reservationstatus}</td>
+                      <td>
+                        <p>
+                          <i class="uil uil-calender"></i> <span>${(row.expiration).split(' ')[0]}</span>
+                        </p>
+                        <p><i class="uil uil-clock"></i><span>${formatTime((row.expiration).split(' ')[1])}</span></p>
+                      </td>
+                    </tr>`;
+          }else
+          {
+            html +=`<tr>
+                      <td>${row.bus_operator}</td>
+                      <td>${row.origin} - ${row.destination}</td>
+                      <td>
+                        <p>
+                          <i class="uil uil-calender"></i> <span>${(row.etd).split(' ')[0]}</span>
+                        </p>
+                        <p><i class="uil uil-clock"></i><span>${formatTime((row.etd).split(' ')[1])}</span></p>
+                      </td>
+                      <td>${row.reference_no}</td>
+                      <td>${ (row.total_amount_due).toLocaleString('en', options)}</td>
+                      <td>${row.paidstatus}</td>
+                      <td>${row.reservationstatus}</td>
+                      <td>
+                        <p>
+                          <i class="uil uil-calender"></i> <span>${(row.expiration).split(' ')[0]}</span>
+                        </p>
+                        <p><i class="uil uil-clock"></i><span>${formatTime((row.expiration).split(' ')[1])}</span></p>
+                      </td>
+                    </tr>`;
+          }
+        });
+
+        placeholder.innerHTML = html;
+        placeholder1.innerHTML = html1;
+      }).catch(error => {
+        console.error('There was an error!', error);
+      });
+    </script>
+
   </body>
 </html>
