--- a/booking.html
+++ b/booking.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="assets/css/form.css" />
     <link rel="stylesheet" href="assets/css/booking.css" />
     <link rel="stylesheet" href="assets/css/buss.css" />
+    <link href="/assets/fileupload/font/font-fileuploader.css" rel="stylesheet">
+    <link href="/assets/fileupload/jquery.fileuploader.min.css" media="all" rel="stylesheet">
 
     <!-- unicons -->
     <link
@@ -527,84 +529,40 @@
     <script src="assets/js/app.js"></script>
     <script src="assets/js/booking.js"></script>
     <script src="assets/js/jquery.min.js"></script>
+    <link href="assets/fileupload/jquery.fileuploader.min.css" media="all" rel="stylesheet">
     <script src="assets/js/loadingoverlay.min.js"></script>
     <script src="assets/swal/sweetalert2.all.js"></script>
     <script src="assets/js/script.js"></script>
     <script>
       $(document).ready(() => {
         getSchedules();
-
       });
-      $('input[type=radio][name=gcash]').click(function() {
-        let fee = 0 ;
-        let refNo = '';
-        let data = {
-          "clientid": sessionStorage.getItem('clientId'),
-          "token": sessionStorage.getItem('TOKEN'),
-          "tripID": sessionStorage.getItem('departure') + '.' + sessionStorage.getItem('RouteId'),
-          "referenceNo": sessionStorage.getItem('refNo')
-        };
-        console.log(data);
-        fetchReservationInfo(data).then(result =>{
-          console.log(result);
-          if(result.length >0 ){
-            result.forEach(d => {
-              refNo = d.ReferenceNo;
-              fee += parseInt(d.AccommodationFee);
-            })
+
+      $('input[type=submit]').click(function () {
+        var token = sessionStorage.getItem("TOKEN");
+        //alert(newpaxlist[0].ReservationNo);
+        // Before the request starts, show the 'Loading message...'
+        $('.result').text('File is being uploaded...');
+        //event.preventDefault();
+        // On the click even,
+        var formData = new FormData($('#form')[0]);
+        $.ajax({
+          type: 'POST',
+          url: apiURL + "/savefile/" + token + "/" + newpaxlist[0].ReservationNo + "/PAYMENT",
+          processData: false,
+          contentType: false,
+          data: formData,
+          success: function (data) {
+            // The file was uploaded successfully...
+            $('.result').text('File was uploaded.');
+            // $('#alert_message span').text('File was uploaded.');
+          },
+          error: function (data) {
+            // there was an error.
+            // $('#alert_message span').text('Whoops! There was an error in the request.');
           }
-        })
-        paygcash(fee, refNo);
-
+        });
       });
-
-      function paygcash(amount, refNo) {
-        alert(amount + '=' + refNo)
-        var pax_data = {
-          module: "IWANTSEATS",
-          amount: parseInt(amount),
-          //amount: "100",
-          email: "",
-          refno: refNo,
-          mobile: "",
-          token:  sessionStorage.getItem("TOKEN")
-        }
-
-        try {
-          $.ajax({
-            url: "https://iwsenterprise.com/iwsticketing_v3/enterprise/paymongocreatesource_augmata.aspx",
-            type: "POST",
-            contentType: "application/json; charset=utf-8",
-            beforeSend: function () {
-              $.LoadingOverlay('show');
-            },
-            complete: function () {
-              $.LoadingOverlay('hide');
-            },
-            data: JSON.stringify(pax_data),
-            success: function (data) {
-              var data1 = JSON.stringify(data);
-              var data11 = JSON.parse(data1);
-              if (data11.RESULT === "SAVED") {
-                let params = `scrollbars=no,resizable=no,status=no,location=no,toolbar=no,menubar=no,
-width=0,height=0,left=-1000,top=-1000`;
-
-                open(data11.URL, 'GCASH', params);
-              }
-              else {
-                alert("Oops. It appears we cannot process your GCash payment for now.")
-              }
-            },
-            error: function (jqXHR, textStatus, errorThrown) {
-              alert("a:" + textStatus);
-            } //End for ajax error
-          }); //End for ajax /api/reservations/passenger/
-        }
-        catch (ex) {
-          alert(ex.message);
-        }
-
-      }
     </script>
   </body>
 </html>
