--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <label for="from">From</label>
                     <div class="input">
                         <i class="uil uil-search search-ic"></i>
-                        <input class="from-value" id="from" name="from" placeholder="Your location" required/>
+                        <input class="from-value" id="from" name="from" placeholder="Your location" required readonly autocomplete="off"/>
                         <i class="uil uil-map-marker"></i>
                     </div>
                     <div class="dropdown">
@@ -68,7 +68,7 @@
                     <label for="to">To</label>
                     <div class="input">
                         <i class="uil uil-search search-ic"></i>
-                        <input class="to-value" id="to" placeholder="Travel location" required/>
+                        <input class="to-value" id="to" placeholder="Travel location" required autocomplete="off" readonly/>
                         <i class="uil uil-location-arrow"></i>
                     </div>
                     <div class="dropdown">
